adding add, chart, settings, and home layout

--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -10,41 +10,44 @@
         android:id="@+id/splashLogo"
         android:layout_width="128dp"
         android:layout_height="128dp"
+        android:layout_marginTop="200dp"
         android:src="@drawable/logo"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/splashText"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="140dp"/>
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/splashText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="BudgetIn"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/splashLogo"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="12dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/splashLogo" />
 
     <EditText
         android:id="@+id/editTextNumberPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="120dp"
+        android:backgroundTint="#FFFFFF"
         android:hint="Masukkan PIN"
+        android:textAlignment="center"
         android:inputType="numberPassword"
         android:maxLength="6"
-        android:textColorHint="#EEEEEE"
         android:textColor="#FFFFFF"
-        android:backgroundTint="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/splashText"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColorHint="#EEEEEE"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="120dp"
-        android:layout_marginEnd="120dp"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/splashText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
