--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,4 +22,11 @@
         <item>Lato</item>
         <item>Montserrat</item>
     </string-array>
+
+    <string-array name="font_options">
+        <item>All Transaction</item>
+        <item>Income</item>
+        <item>Outcome</item>
+    </string-array>
+
 </resources>
